--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,10 +7,6 @@
     border: 1px dashed #39ff14;
 }
 
-.backdrop-blur-container{
-    backdrop-filter: blur(30px);
-}
-
 .text-green-old{
     color: #37ff14b0;
 }
@@ -237,4 +233,56 @@
       clip: rect(40px, 9999px, 52px, 0);
       transform: skew(0.62deg);
     }
+  }
+  
+  @keyframes appear {
+    0% {
+      opacity: 0;
+      transform: scale(0.5);
+    }
+    100% {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+  
+  @keyframes hologram {
+    0% {
+      background-position: 100% 0;
+    }
+    100% {
+      background-position: -100% 100%;
+    }
+  }
+  
+  .hologram-button {
+    position: relative;
+    overflow: hidden;
+    background: transparent;
+    color: white;
+    border: 2px solid white;
+    border-radius: 8px;
+    font-size: 16px;
+    cursor: pointer;
+    padding: 10px 20px;
+    outline: none;
+  }
+  
+  .hologram-button::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(45deg, rgba(255,0,0,0.5), rgba(0,255,0,0.5), rgba(0,0,255,0.5));
+    background-size: 200% 200%;
+    animation: hologram 2s linear infinite;
+    z-index: 1;
+    mix-blend-mode: overlay;
+  }
+  
+  .hologram-button span {
+    position: relative;
+    z-index: 2;
   }
